CLI: Add Import XML command (#3572)
The CLI now contains an "import" command that creates a new database from the specified XML export. The new database is in kdbx 4 format, and does not currently accept a keyfile in database creation.

This change is required to create new databases from XML backups.

Fixes #2458

--- a/src/cli/keepassxc-cli.1
+++ b/src/cli/keepassxc-cli.1
@@ -51,6 +51,9 @@ Generates a random password.
 .IP "help [command]"
 Displays a list of available commands, or detailed information about the specified command.
 
+.IP "import [options] <xml> <database>"
+Imports the contents of an XML database to the target database.
+
 .IP "locate [options] <database> <term>"
 Locates all the entries that match a specific search term in a database.
 
