--- a/share/docs/man/keepassxc-cli.1
+++ b/share/docs/man/keepassxc-cli.1
@@ -6,7 +6,9 @@ keepassxc-cli \- command line interface for the \fBKeePassXC\fP password manager
 .SH SYNOPSIS
 .B keepassxc-cli
 .I command
-.RI [ options ]
+.B [
+-I options
+.B ]
 
 .SH DESCRIPTION
 \fBkeepassxc-cli\fP is the command line interface for the \fBKeePassXC\fP password manager. It provides the ability to query and modify the entries of a KeePass database, directly from the command line.
